--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,6 @@
 DB_HOST=127.0.0.1
-DB_USER=testuser
-DB_PASS=a%e152aO1
-DB_NAME=BMSD22a_Traderoo
+DB_USER=root
+DB_PASS=DbBullshit17
+DB_NAME=traderoo
+DB_PORT=3308
+JWT_SECRET=geheimes_token
